--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>{{ page.title | default: "murasamebot-website" }}</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+  {{ content }}
+</body>
+</html>
